--- a/index.html
+++ b/index.html
@@ -3,13 +3,140 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<h1>, initial-scale=1.0">
-    <title>Resume: Rob McCormack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My New Website</title>
+    <!-- Minified version -->
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <!-- ref: https://simplecss.org/ -->
+    <style>
+        body {
+            background-color: #1b057c;
+            padding: 1%;
+            color: #ccc;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+            font-size: 1em;
+        }
+
+        .console {
+            font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+        }
+
+        input[type="button"] {
+            cursor: pointer;
+        }
+    </style>
+
+    <script>
+        window.console = window.console || function (t) { };
+    </script>
+
+
+
+    <script>
+        if (document.location.search.match(/type=embed/gi)) {
+            window.parent.postMessage("resize", "*");
+        }
+    </script>
+
 </head>
 
 <body>
-    <h1>Rob's Resume</h1>
+    <!-- <header>
+        <h1>Hello, world</h1>
+        <p>Welcome to my website!</p>
+    </header> -->
+
+    <main>
+        <p>abc</p>
+    </main>
+
+    <p>
+        <!-- <input type="text" id="user-caption" value="Type something here!" />
+        <input type="button" id="test-typing" value="Test Typing Effect" /> -->
+        <input type="button" id="test-erasing" value="Test Erasing Effect" />
+    </p>
+    <p class="console">
+        <span></span>
+        <span>PS C:\\Users\\rob <br> >>> </span><span id="caption"></span><span id="cursor">|</span>
+    </p>
+
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script id="rendered-js">
+        var captionLength = 0;
+        var caption1 = `'<br>Now is the time for \n all good ment <br> new line asdf <br><a href="http://cnn.com">Go to cnn</a> 
+        It is a long established fact that a reader will be distracted by the readable content 
+         a page when looking at its layout.The point  using
+         Lorem Ipsum is that it has a more'`;
+
+
+        $(document).ready(function () {
+            setInterval('cursorAnimation()', 600);
+            captionEl = $('#caption');
+
+            testTypingEffect()
+
+            $('#test-typing').click(function () {
+                testTypingEffect();
+            });
+
+            $('#test-erasing').click(function () {
+                testErasingEffect();
+            });
+        });
+
+        function testTypingEffect() {
+            caption = caption1;
+            type();
+        }
+
+        function type() {
+            captionEl.html(caption.substr(0, captionLength++));
+            if (captionLength < caption.length + 1) {
+                setTimeout('type()', 50);
+            } else {
+                captionLength = 0;
+                caption = '';
+            }
+        }
+
+        function testErasingEffect() {
+            caption = captionEl.html();
+            captionLength = caption.length;
+            if (captionLength > 0) {
+                erase();
+            } else {
+                $('#caption').html("You didn't write anything to erase, but that's ok!");
+                setTimeout('testErasingEffect()', 1000);
+            }
+        }
+
+        function erase() {
+            captionEl.html(caption.substr(0, captionLength--));
+            if (captionLength >= 0) {
+                setTimeout('erase()', 50);
+            } else {
+                captionLength = 0;
+                caption = '';
+            }
+        }
+
+        function cursorAnimation() {
+            $('#cursor').animate({
+                opacity: 0
+            },
+                'fast', 'swing').animate({
+                    opacity: 1
+                },
+                    'fast', 'swing');
+        }
+
+    </script>
+
+
+    <footer>
+        <p>Jane Smith's website.</p>
+    </footer>
 </body>
 
 </html>
