--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </main>
 
     <p>
-        <!-- <input type="text" id="user-caption" value="Type something here!" />
-        <input type="button" id="test-typing" value="Test Typing Effect" /> -->
-        <input type="button" id="test-erasing" value="Test Erasing Effect" />
+        <!-- <input type="text" id="user-caption" value="Type something here!">
+        <input type="button" id="test-typing" value="Test Typing Effect"> -->
+        <input type="button" id="test-erasing" value="Test Erasing Effect">
     </p>
     <p class="console">
         <span></span>
