--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Resume: Rob McCormack</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <script src="https://use.fontawesome.com/06403bf563.js"></script>
     <!-- ref: https://simplecss.org/ -->
     <style>
         body {
@@ -55,8 +56,13 @@
         <p>Welcome to my website!</p>
     </header> -->
 
+
+
     <main>
         <p>abc</p>
+        <i class="fa fa-car"></i>
+        <i class="fa fa-car" style="font-size:48px;"></i>
+        <i class="fa fa-car" style="font-size:60px;color:red;"></i>
     </main>
 
     <p>
