--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Resume: Rob McCormack</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-    <script src="https://use.fontawesome.com/06403bf563.js"></script>
+    <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- ref: https://simplecss.org/ -->
     <style>
         body {
@@ -60,9 +61,12 @@
 
     <main>
         <p>abc</p>
-        <i class="fa fa-car"></i>
-        <i class="fa fa-car" style="font-size:48px;"></i>
-        <i class="fa fa-car" style="font-size:60px;color:red;"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa fa-github"></i>
+        <a href="https://github.com"><i class="fa fa-github" style="font-size:24px"></i></a>
+
+        <i class="fa fa-github" style="font-size:36px"></i>
+        <i class="fa fa-github" style="font-size:48px;color:red"></i>
     </main>
 
     <p>
