added google font Red Hat Mono

--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <title>Resume: Rob McCormack</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Red Hat Mono">
     <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- ref: https://simplecss.org/ -->
     <style>
         body {
             background-color: #1b057c;
             padding: 1%;
             color: #ccc;
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-family: "Red Hat Mono", sans-serif;
 
             font-size: 1em;
         }
 
         .console {
-            font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+            font-family: "Red Hat Mono", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
         }
 
         input[type="button"] {
@@ -61,12 +63,16 @@
 
     <main>
         <p>abc</p>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-github"></i>
         <i class="fa-brands fa-github"></i>
         <i class="fa fa-github"></i>
-        <a href="https://github.com"><i class="fa fa-github" style="font-size:24px"></i></a>
+        <a href="https://github.com"><i class="fa-brands fa-github"" style=" font-size:24px"></i></a>
 
-        <i class="fa fa-github" style="font-size:36px"></i>
-        <i class="fa fa-github" style="font-size:48px;color:red"></i>
+        <i class="fa-brands fa-github"" style=" font-size:36px"></i>
+        <i class="fa-brands fa-github"" style=" font-size:48px;color:red"></i>
+        <i class="fa-brands fa-python"></i>
     </main>
 
     <p>
