added block quote

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
         <p>Welcome to my website!</p>
     </header> -->
 
-
+    <blockquote>
+        <p>Friends don’t spy; true friendship is about privacy, too.</p>
+        <p><cite>– Stephen King</cite></p>
+    </blockquote>
 
     <main>
         <p>abc</p>
