important to backgouind color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- RAM: check that theme color it is suppose to color url bar.. -->
     <title>Resume: Rob McCormack</title>
     <!-- Minified version -->
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Red Hat Mono">
     <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
@@ -16,8 +16,8 @@
     <!-- ref: https://simplecss.org/ -->
     <style>
         body {
-            background-color: #1b057c;
-            padding: 1%;
+            background-color: #1b057c !important;
+            padding: %;
             color: #ccc;
             font-family: "Red Hat Mono", sans-serif;
 
@@ -59,10 +59,6 @@
         <p>Welcome to my website!</p>
     </header> -->
 
-    <blockquote>
-        <p>Friends don’t spy; true friendship is about privacy, too.</p>
-        <p><cite>– Stephen King</cite></p>
-    </blockquote>
 
     <main>
         <p>abc</p>
@@ -159,6 +155,10 @@
         }
 
     </script>
+
+    <blockquote>
+        <p><cite>– Stephen King</cite></p>
+    </blockquote>
 
 
     <footer>
