added text to messager re: programmer

--- a/index.html
+++ b/index.html
@@ -63,14 +63,9 @@
     <main>
         <p>abc</p>
         <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa fa-github"></i>
-        <a href="https://github.com"><i class="fa-brands fa-github"" style=" font-size:24px"></i></a>
 
-        <i class="fa-brands fa-github"" style=" font-size:36px"></i>
-        <i class="fa-brands fa-github"" style=" font-size:48px;color:red"></i>
+        <a href="https://github.com"><i class="fa-brands fa-github"" style=" font-size:24px"></i></a>
+        <i class="fa-brands fa-github" style=" font-size:36px;color:red"></i>
         <i class="fa-brands fa-python"></i>
     </main>
 
@@ -87,10 +82,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js'></script>
     <script id="rendered-js">
         var captionLength = 0;
-        var caption1 = `'<br>Now is the time for \n all good ment <br> new line asdf <br><a href="http://cnn.com">Go to cnn</a> 
-        It is a long established fact that a reader will be distracted by the readable content 
-         a page when looking at its layout.The point  using
-         Lorem Ipsum is that it has a more'`;
+        var caption1 = `I am an experienced Python programmer with a strong background in computer science and software development. Over the past five years, I have gained expertise in a wide range of Python libraries and frameworks, including Django, Flask, and NumPy. I have also completed several projects using Python, including the development of a web scraper for data analysis and the creation of a machine learning model for predicting stock prices. In my current role, I have consistently used Python to develop and maintain efficient and reliable software solutions. I am confident in my ability to utilize my Python skills to make a positive impact in any programming position. `;
 
 
         $(document).ready(function () {
