--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
         }
     </style>
 
+    <style>
+        .blink {
+            animation: blinker 1.5s linear infinite;
+            color: red;
+            font-family: sans-serif;
+        }
+
+        @keyframes blinker {
+            50% {
+                opacity: 0;
+            }
+        }
+    </style>
+
     <script>
         window.console = window.console || function (t) { };
     </script>
@@ -69,10 +83,10 @@
             window.parent.postMessage("resize", "*");
         }
     </script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://rob-mccormack.github.io/resume//apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://rob-mccormack.github.io/resume//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://rob-mccormack.github.io/resume//favicon-16x16.png">
+    <link rel="mask-icon" href="https://rob-mccormack.github.io/resume//safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -100,9 +114,9 @@
         <input type="button" id="test-erasing" value="Test Erasing Effect">
     </p>
     <p class="console">
-        <a href=""></a>
         <span></span>
-        <span>PS C:\\Users\\rob <br> >>> </span><span id="caption"></span><span id="cursor">|</span>
+        <span>PS C:\\Users\\rob <br></span><span class="blink">>>> </span><span id="caption"></span><span
+            id="cursor">|</span>
     </p>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js'></script>
     <script id="rendered-js">
