added a calculated date

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js'></script>
     <script id="rendered-js">
         var captionLength = 0;
-        var caption1 = `I am an experienced Python programmer with a strong background in computer science
+        currentDate = new Date().toJSON().slice(0, 10);
+
+        var caption1 = currentDate + `  I am an experienced Python programmer with a strong background in computer science
          and software development.<br>
          <a href="http://cnn.com">CNN</a>
           <p>Over the past five years, I have gained expertise in a wide range of
