fixed various HTML5 validation errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Resume: Rob McCormack</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Red Hat Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Red+Hat+Mono">
     <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -17,7 +17,7 @@
     <style>
         body {
             background-color: #202123 !important;
-            padding: %;
+            padding: 9%;
             color: #ccc;
             font-family: "Red Hat Mono", sans-serif;
 
@@ -103,7 +103,7 @@
         <p>abc</p>
         <i class="fa-brands fa-linkedin"></i>
 
-        <a href="https://github.com"><i class="fa-brands fa-github"" style=" font-size:24px"></i></a>
+        <a href="https://github.com"><i class="fa-brands fa-github" style=" font-size:24px"></i></a>
         <i class="fa-brands fa-github" style=" font-size:36px;color:red"></i>
         <i class="fa-brands fa-python"></i>
     </main>
