fixed padding, moved button down

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         body {
             background-color: #202123 !important;
-            padding: 9%;
+            padding: 3%;
             color: #ccc;
             font-family: "Red Hat Mono", sans-serif;
 
@@ -99,20 +99,15 @@
     </header> -->
 
 
-    <main>
-        <p>abc</p>
+    <div>
         <i class="fa-brands fa-linkedin"></i>
 
         <a href="https://github.com"><i class="fa-brands fa-github" style=" font-size:24px"></i></a>
         <i class="fa-brands fa-github" style=" font-size:36px;color:red"></i>
         <i class="fa-brands fa-python"></i>
-    </main>
+    </div>
 
-    <p>
-        <!-- <input type="text" id="user-caption" value="Type something here!">
-        <input type="button" id="test-typing" value="Test Typing Effect"> -->
-        <input type="button" id="test-erasing" value="Test Erasing Effect">
-    </p>
+
     <p class="console">
         <span></span>
         <span>PS C:\\Users\\rob <br></span><span class="blink">>>> </span><span id="caption"></span><span
@@ -199,6 +194,13 @@
         }
 
     </script>
+
+
+    <p>
+        <!-- <input type="text" id="user-caption" value="Type something here!">
+        <input type="button" id="test-typing" value="Test Typing Effect"> -->
+        <input type="button" id="test-erasing" value="Test Erasing Effect">
+    </p>
 
     <blockquote>
         <p><cite>– Stephen King</cite></p>
