added prompt with full name

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Resume for Rob McCormack.">
-    <!-- RAM: check that theme color it is suppose to color url bar.. -->
-    <title>Resume: Rob McCormack</title>
+    <title>Resume: Rob McCormack, Programmer</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Red+Hat+Mono">
@@ -110,7 +109,7 @@
 
     <p class="console">
         <span></span>
-        <span>PS C:\\Users\\rob <br></span><span class="blink">>>> </span><span id="caption"></span><span
+        <span>PS C:\\Users\\Rob_McCormack<br></span><span class="blink">>>> </span><span id="caption"></span><span
             id="cursor">|</span>
     </p>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js'></script>
