--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             font-size: 1em;
         }
 
+        #test-erasing {
+            display: none;
+        }
+
+
         .console {
             padding: 14px;
             border-radius: 5px;
@@ -99,11 +104,10 @@
 
 
     <div>
-        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-linkedin" style=" font-size:24px"></i>
 
         <a href="https://github.com"><i class="fa-brands fa-github" style=" font-size:24px"></i></a>
-        <i class="fa-brands fa-github" style=" font-size:36px;color:red"></i>
-        <i class="fa-brands fa-python"></i>
+        <i class="fa-brands fa-python" style=" font-size:24px"></i>
     </div>
 
 
@@ -120,15 +124,7 @@
         var caption1 = currentDate + `  I am an experienced Python programmer with a strong background in computer science
          and software development.<br>
          <a href="http://cnn.com">CNN</a>
-          <p>Over the past five years, I have gained expertise in a wide range of
-          Python libraries and frameworks, including Django, Flask, and NumPy. 
-          </p>
-          I have also completed several projects using Python, including the development
-           of a web scraper for data analysis and the creation of a machine learning model for
-            predicting stock prices. In my current role, I have consistently used Python to develop
-             and maintain efficient and reliable software solutions.
-              I am confident in my ability to utilize my Python skills to make a positive impact
-               in any programming position. ~ Rob`;
+         ~ Rob`;
 
 
         $(document).ready(function () {
@@ -158,7 +154,16 @@
             } else {
                 captionLength = 0;
                 caption = '';
+                allDone()
+
             }
+        }
+
+        function allDone() {
+            <!-- document.getElementById('test-erasing').display = block -->
+            alert('type all done Rob')
+            const element = document.getElementById("test-erasing");
+            element.style.display = "block";
         }
 
         function testErasingEffect() {
