added photo, removed temp. alert(()

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
 
     <div>
+        <img src="images/rob.jpg" alt="photo">
         <i class="fa-brands fa-linkedin" style=" font-size:24px"></i>
 
         <a href="https://github.com"><i class="fa-brands fa-github" style=" font-size:24px"></i></a>
@@ -161,7 +162,7 @@
 
         function allDone() {
             <!-- document.getElementById('test-erasing').display = block -->
-            alert('type all done Rob')
+            // alert('type all done Rob')
             const element = document.getElementById("test-erasing");
             element.style.display = "block";
         }
