--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             font-size: 1em;
         }
 
+        aside {
+            font-size: 1rem;
+            width: 30%;
+            padding: 0 15px;
+            margin-left: 15px;
+            float: left;
+        }
+
         #test-erasing {
             display: none;
         }
@@ -104,6 +112,24 @@
 
 
     <div>
+        <div class="fa-3x">
+            <hr>
+            <i class="fa-brands fa-github  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+            <i class="fa-brands fa-linkedin  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+            <i class="fa-brands fa-python  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+            <i class="fa-solid fa-motorcycle  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+
+            <hr>
+
+
+        </div>
+        <aside>
+            <p>test 123
+                <kbd>Alt+F4</kbd>
+
+
+            </p>
+        </aside>
         <img src="images/rob.jpg" alt="photo">
         <i class="fa-brands fa-linkedin" style=" font-size:24px"></i>
 
@@ -122,7 +148,7 @@
         var captionLength = 0;
         currentDate = new Date().toJSON().slice(0, 10);
 
-        var caption1 = currentDate + `  I am an experienced Python programmer with a strong background in computer science
+        var caption1 = currentDate + `  I am an experienced <mark>Python programmer</mark> with a strong background in computer science
          and software development.<br>
          <a href="http://cnn.com">CNN</a>
          ~ Rob`;
@@ -205,6 +231,11 @@
         <!-- <input type="text" id="user-caption" value="Type something here!">
         <input type="button" id="test-typing" value="Test Typing Effect"> -->
         <input type="button" id="test-erasing" value="Test Erasing Effect">
+    </p>
+
+    <p>
+        <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
+
     </p>
 
     <blockquote>
