--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             font-size: 1em;
         }
 
+        body>footer {
+            margin-top: 4rem;
+            padding: 2rem 1rem 1.5rem 1rem;
+            color: var(--text-light);
+            font-size: 0.9rem;
+            text-align: center;
+            border-top: 0px solid var(--border);
+            */
+        }
+
         aside {
             font-size: 1rem;
             width: 30%;
@@ -32,6 +42,10 @@
         }
 
         #test-erasing {
+            display: none;
+        }
+
+        #fa-3x {
             display: none;
         }
 
@@ -112,29 +126,10 @@
 
 
     <div>
-        <div class="fa-3x">
-            <hr>
-            <i class="fa-brands fa-github  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
-            <i class="fa-brands fa-linkedin  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
-            <i class="fa-brands fa-python  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
-            <i class="fa-solid fa-motorcycle  fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
-
-            <hr>
 
 
-        </div>
-        <aside>
-            <p>test 123
-                <kbd>Alt+F4</kbd>
-
-
-            </p>
-        </aside>
         <img src="images/rob.jpg" alt="photo">
-        <i class="fa-brands fa-linkedin" style=" font-size:24px"></i>
 
-        <a href="https://github.com"><i class="fa-brands fa-github" style=" font-size:24px"></i></a>
-        <i class="fa-brands fa-python" style=" font-size:24px"></i>
     </div>
 
 
@@ -150,7 +145,6 @@
 
         var caption1 = currentDate + `  I am an experienced <mark>Python programmer</mark> with a strong background in computer science
          and software development.<br>
-         <a href="http://cnn.com">CNN</a>
          ~ Rob`;
 
 
@@ -191,6 +185,10 @@
             // alert('type all done Rob')
             const element = document.getElementById("test-erasing");
             element.style.display = "block";
+            const element1 = document.getElementById("fa-3x");
+            element1.style.display = "block";
+
+
         }
 
         function testErasingEffect() {
@@ -226,25 +224,32 @@
 
     </script>
 
-
     <p>
-        <!-- <input type="text" id="user-caption" value="Type something here!">
+    <div id="fa-3x">
+        <i class="fa-brands fa-github  fa-fade"
+            style="font-size:30px; --fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+        <i class="fa-brands fa-linkedin  fa-fade"
+            style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+        <i class="fa-brands fa-python  fa-fade"
+            style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+        <i class="fa-solid fa-motorcycle  fa-fade"
+            style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+
+        <p>
+            <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
+
+        </p>
+
+    </div>
+    <!-- <input type="text" id="user-caption" value="Type something here!">
         <input type="button" id="test-typing" value="Test Typing Effect"> -->
-        <input type="button" id="test-erasing" value="Test Erasing Effect">
+    <input type="button" id="test-erasing" value="Test Erasing Effect">
     </p>
 
-    <p>
-        <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
-
-    </p>
-
-    <blockquote>
-        <p><cite>– Stephen King</cite></p>
-    </blockquote>
 
 
     <footer>
-        <p>Jane Smith's website.</p>
+        <p>...</p>
     </footer>
 </body>
 
