fixes, added caption to tw 200

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             color: #ccc;
             font-family: "Red Hat Mono", sans-serif;
 
-            font-size: 1em;
+            font-size: 0.75em;
         }
 
         body>footer {
@@ -134,7 +134,7 @@
 
 
     <p class="console">
-        <span></span>
+
         <span>PS C:\\Users\\Rob_McCormack<br></span><span class="blink">>>> </span><span id="caption"></span><span
             id="cursor">|</span>
     </p>
@@ -236,7 +236,12 @@
             style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
 
         <p>
+        <figure>
             <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
+            <figcaption>My customized "Army" Yamaha TW 200</figcaption>
+        </figure>
+
+
 
         </p>
 
