fixed blink color

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
 
     <style>
         .blink {
-            animation: blinker 1.5s linear infinite;
-            color: red;
-            font-family: sans-serif;
+            animation: blinker 2.0s linear infinite;
+            color: rgb(240, 235, 235);
         }
 
         @keyframes blinker {
