fixes, hide button for now.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Resume: Rob McCormack, Programmer</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Red+Hat+Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -18,9 +18,9 @@
             background-color: #202123 !important;
             padding: 3%;
             color: #ccc;
-            font-family: "Red Hat Mono", sans-serif;
+            font-family: "Roboto", sans-serif;
 
-            font-size: 0.75em;
+            font-size: 1.0em;
         }
 
         body>footer {
@@ -31,6 +31,10 @@
             text-align: center;
             border-top: 0px solid var(--border);
             */
+        }
+
+        i {
+            margin-right: 15px;
         }
 
         aside {
@@ -54,7 +58,7 @@
             padding: 14px;
             border-radius: 5px;
             background-color: #40414F;
-            font-family: "Red Hat Mono", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+            font-family: "Roboto", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
         }
 
         input[type="button"] {
@@ -182,8 +186,7 @@
         function allDone() {
             <!-- document.getElementById('test-erasing').display = block -->
             // alert('type all done Rob')
-            const element = document.getElementById("test-erasing");
-            element.style.display = "block";
+
             const element1 = document.getElementById("fa-3x");
             element1.style.display = "block";
 
