--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"> -->
     <!-- ref: https://simplecss.org/ -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js'></script>
-    <script type="text/javascript" src="js/terminal_resume.js"></script>
+    <script src="js/terminal_resume.js"></script>
     <style>
         body {
             background-color: #202123 !important;
@@ -147,7 +147,6 @@
         <i class="fa-solid fa-motorcycle  fa-fade"
             style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
 
-        <p>
         <figure>
             <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
             <figcaption>My customized "Army" Yamaha TW 200</figcaption>
@@ -155,13 +154,13 @@
 
 
 
-        </p>
+
 
     </div>
     <!-- <input type="text" id="user-caption" value="Type something here!">
         <input type="button" id="test-typing" value="Test Typing Effect"> -->
     <input type="button" id="test-erasing" value="Test Erasing Effect">
-    </p>
+
 
 
 
