various fixes, css etc.

--- a/index.html
+++ b/index.html
@@ -5,92 +5,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Resume for Rob McCormack.">
+
     <title>Resume: Rob McCormack, Programmer</title>
-    <!-- Minified version -->
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+
+    <link rel="stylesheet" href="css/simple.css"><!-- ref: https://simplecss.org/ -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <!-- <script src="https://use.fontawesome.com/06403bf563.js"></script> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"> -->
-    <!-- ref: https://simplecss.org/ -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js'></script>
     <script src="js/terminal_resume.js"></script>
+
     <style>
         body {
-            background-color: #202123 !important;
-            padding: 3%;
-            color: #ccc;
-            font-family: "Roboto", sans-serif;
+            xfont-family: "Roboto",
+                sans-serif;
 
-            font-size: 1.0em;
+            xfont-size: 1.0em;
         }
 
-        body>footer {
-            margin-top: 4rem;
-            padding: 2rem 1rem 1.5rem 1rem;
-            color: var(--text-light);
-            font-size: 0.9rem;
-            text-align: center;
-            border-top: 0px solid var(--border);
-
+        -->body>footer {
+            margin-top:
+                4rem;
+            padding:
+                2rem 1rem 1.5rem 1rem;
+            color:
+                var(--text-light);
+            font-size:
+                0.9rem;
+            text-align:
+                center;
+            border-top:
+                0px solid var(--border);
         }
 
         i {
+
             margin-right: 15px;
+            margin-bottom: 15px;
         }
 
-        aside {
-            font-size: 1rem;
-            width: 30%;
-            padding: 0 15px;
-            margin-left: 15px;
-            float: left;
-        }
+
 
         #test-erasing {
-            display: none;
+            display:
+                none;
         }
 
         #fa-3x {
-            display: none;
+            display:
+                none;
         }
 
-
         .console {
-            padding: 14px;
-            border-radius: 5px;
-            background-color: #40414F;
-            font-family: "Roboto", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+            padding:
+                14px;
+            border-radius:
+                5px;
+            background-color:
+                #40414F;
+            font-family:
+                "Roboto",
+                "Lucida, Console", "Monaco", monospace;
         }
 
         input[type="button"] {
-            cursor: pointer;
+            cursor:
+                pointer;
         }
 
-        /* If the link is unvisited you see this color*/
+        /*
+        If
+        the
+        link
+        is
+        unvisited
+        you
+        see
+        this
+        color*/
         a:link {
-            color: #006600;
-            text-decoration: none;
+            color:
+                #006600;
+            text-decoration:
+                none;
         }
 
-        /* If the link is visited you see this color*/
+        /*
+        If
+        the
+        link
+        is
+        visited
+        you
+        see
+        this
+        color*/
         a:visited {
-            color: rgb(255, 105, 223);
+            color:
+                rgb(255,
+                    105,
+                    223);
         }
 
-        /* On placing mouse over the link */
+        /*
+        On
+        placing
+        mouse
+        over
+        the
+        link
+        */
         a:hover {
-            color: rgb(128, 105, 255);
-            text-decoration: underline;
+            color:
+                rgb(128,
+                    105,
+                    255);
+            text-decoration:
+                underline;
         }
 
-        /* If the click the link,  you see this color*/
+        /*
+        If
+        the
+        click
+        the
+        link,
+        you
+        see
+        this
+        color*/
         a:active {
-            color: rgb(255, 105, 138);
+            color:
+                rgb(255,
+                    105,
+                    138);
         }
-    </style>
 
-    <style>
         .blink {
             animation: blinker 2.0s linear infinite;
             color: rgb(240, 235, 235);
