--- a/index.html
+++ b/index.html
@@ -16,14 +16,7 @@
     <script src="js/terminal_resume.js"></script>
 
     <style>
-        body {
-            xfont-family: "Roboto",
-                sans-serif;
-
-            xfont-size: 1.0em;
-        }
-
-        -->body>footer {
+        body>footer {
             margin-top:
                 4rem;
             padding:
@@ -164,24 +157,16 @@
 </head>
 
 <body>
-    <!-- <header>
-        <h1>Hello, world</h1>
-        <p>Welcome to my website!</p>
-    </header> -->
-
 
     <div>
-
-
         <img src="images/rob.jpg" alt="photo">
-
     </div>
 
-
     <p class="console">
-
-        <span>PS C:\\Users\\Rob_McCormack<br></span><span class="blink">>>> </span><span id="caption"></span><span
-            id="cursor">|</span>
+        <span>PS C:\\Users\\Rob_McCormack<br></span>
+        <span class="blink">>>> </span>
+        <span id="caption"></span>
+        <span id="cursor">|</span>
     </p>
 
 
