--- a/index.html
+++ b/index.html
@@ -61,6 +61,64 @@
                 "Lucida, Console", "Monaco", monospace;
         }
 
+        .fade-in {
+            animation: fadeIn ease 10s;
+            -webkit-animation: fadeIn ease 10s;
+            -moz-animation: fadeIn ease 10s;
+            -o-animation: fadeIn ease 10s;
+            -ms-animation: fadeIn ease 10s;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-moz-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-webkit-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-o-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-ms-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
         input[type="button"] {
             cursor:
                 pointer;
@@ -182,7 +240,7 @@
         <i class="fa-solid fa-motorcycle  fa-fade"
             style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
 
-        <figure>
+        <figure class="fade-in">
             <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
             <figcaption>My customized "Army" Yamaha TW 200</figcaption>
         </figure>
