--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
             style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
         <i class="fa-solid fa-motorcycle  fa-fade"
             style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
+        <i class="fa-regular fa-envelope  fa-fade"
+            style="font-size:30px;--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i>
 
         <figure class="fade-in">
             <img src="images/tw200.jpg" alt="CUSTOM: Yamaha TW 200 - 2018">
@@ -258,7 +260,9 @@
 
 
     <footer>
-        <p>...</p>
+        <p>
+            <i class="fab fa-canadian-maple-leaf"></i>Made in Canada
+        </p>
     </footer>
 </body>
 
